Switch to mononoki font

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0px;
-    font-family: "FiraCode Nerd Font";
+    font-family: "mononoki";
     font-size: 16px;
     min-height: 0;
     color: #ebdbb2;
