Waybar: don't force network interface; change appearance

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -5,11 +5,11 @@
     font-size: 16px;
     min-height: 0;
     color: #ebdbb2;
+    padding: 0;
 }
 
 window#waybar {
     border-top-style: inset;
-    border-top: 1px solid #e6c547;
     background: #1d2021;
 }
 
@@ -24,12 +24,12 @@ window#waybar {
 
 /* Workspace Buttons */
 #workspaces button {
-    border-top: 4px solid transparent;
+    border-top: 1px solid transparent;
 }
 #workspaces button:hover {
     background: inherit;
     box-shadow: inherit;
-    border-top: 4px solid #e6c547;
+    border-top: 1px solid #e6c547;
 }
 #workspaces button.focused {
     border-top-color: #e6c547;
@@ -70,37 +70,37 @@ window#waybar {
 }
 
 #network {
-    border-top: 4px solid #7aa6da;
+    border-top: 1px solid #7aa6da;
 }
 
 #custom-music {
     color: #b8bb26;
     margin: 0 15px;
     padding: 0 20px;
-    border-bottom: 4px solid #b8bb26;
+    border-bottom: 1px solid #b8bb26;
 }
 
 #custom-worktime {
     padding: 0 5px;
-    border-top: 4px solid #ebdbb2
+    border-top: 1px solid #ebdbb2
 
 }
 
 #clock {
     margin: 0;
     color: #e6c547;
-    border-top: 4px solid #fabd2f;
+    border-top: 1px solid #fabd2f;
 }
 
 
 #network.disconnected {
     color: #cc241d;
-    border-top: 4px solid #cc241d;
+    border-top: 1px solid #cc241d;
 }
 
 
 #pulseaudio.muted {
     padding: 0 20px;
     color: #cc241d;
-    border-top: 4px solid #cc241d;
+    border-top: 1px solid #cc241d;
 }
