Shorten ethernet format and add Font Awesome in waybar

--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     border-radius: 0px;
-    font-family: "mononoki";
+    font-family: mononoki, "Font Awesome 5 Free";
     font-size: 16px;
     color: #ebdbb2;
     padding: 0;
