--- a/dot_config/waybar/style.css.tmpl
+++ b/dot_config/waybar/style.css.tmpl
@@ -2,9 +2,10 @@
     border: none;
     border-radius: 0px;
     font-family: mononoki, "Font Awesome 5 Free";
-    font-size: 16px;
+    font-size: {{ if eq .device "desktop" -}} 12px {{- else if eq .device "laptop" -}} 16px {{- end}};
     color: #ebdbb2;
     padding: 0;
+    min-height: 0;
 }
 
 window#waybar {
