sway: reduce touchpad scroll factor

--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -244,6 +244,7 @@ output * bg ~/pics/wallpapers/primary fill
 input "1267:12363:MSFT0002:01_04F3:304B_Touchpad" {
     tap enabled
     middle_emulation enabled
+    scroll_factor 0.5
 }
 
 # Start touchpad gestures
