sway: Start ytoold before libinput-gestures

--- a/dot_config/sway/config.tmpl
+++ b/dot_config/sway/config.tmpl
@@ -252,5 +252,6 @@ input "1267:12363:MSFT0002:01_04F3:304B_Touchpad" {
 }
 
 # Start touchpad gestures
+exec ydotoold
 exec libinput-gestures-setup start
 {{- end -}}
