waybar: move borders to bottom

--- a/dot_config/waybar/style.css.tmpl
+++ b/dot_config/waybar/style.css.tmpl
@@ -9,7 +9,7 @@
 }
 
 window#waybar {
-    border-top-style: inset;
+    border-bottom-style: inset;
     background: #1d2021;
 }
 
@@ -24,21 +24,21 @@ window#waybar {
 
 /* Workspace Buttons */
 #workspaces button {
-    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
 }
 #workspaces button:hover {
     background: inherit;
     box-shadow: inherit;
-    border-top: 1px solid #e6c547;
+    border-bottom: 1px solid #e6c547;
 }
 #workspaces button.focused {
-    border-top-color: #e6c547;
+    border-bottom-color: #e6c547;
 }
 #workspaces button label {
     /* color: #689d6a; */
 }
 #workspaces button label {
-    border-top-color: #e6c547;
+    border-bottom-color: #e6c547;
 }
 #workspaces button.focused label {
     /* color: #1d2021; */
@@ -71,7 +71,7 @@ window#waybar {
 }
 
 #network {
-    border-top: 1px solid #7aa6da;
+    border-bottom: 1px solid #7aa6da;
 }
 
 #custom-music {
@@ -83,25 +83,25 @@ window#waybar {
 
 #custom-worktime {
     padding: 0 5px;
-    border-top: 1px solid #ebdbb2
+    border-bottom: 1px solid #ebdbb2
 
 }
 
 #clock {
     margin: 0;
     color: #e6c547;
-    border-top: 1px solid #fabd2f;
+    border-bottom: 1px solid #fabd2f;
 }
 
 
 #network.disconnected {
     color: #cc241d;
-    border-top: 1px solid #cc241d;
+    border-bottom: 1px solid #cc241d;
 }
 
 
 #pulseaudio.muted {
     padding: 0 20px;
     color: #cc241d;
-    border-top: 1px solid #cc241d;
+    border-bottom: 1px solid #cc241d;
 }
