waybar: fix focused top border color

--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -32,6 +32,7 @@ widget > label, #tray {
 /* Highlighted components */
 #workspaces button.focused, #network, #clock, #idle_inhibitor.activated {
     border-bottom-color: #{{colors.accent}};
+    border-top-color: #{{colors.highlight}};
     background-color: #{{colors.highlight}};
 }
 
