--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -61,13 +61,13 @@ widget > label {
 
 /* RIGHT MODULES */
 /* These modules have rounded corners on the left */
-#idle_inhibitor, #network, #custom-keyboard_layout, #tray {
+#idle_inhibitor, #network, #temperature, #custom-keyboard_layout, #tray {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
 }
 
 /* These modules have rounded corners on the right */
-#pulseaudio, #memory, #clock, #tray {
+#pulseaudio, #memory, #battery, #clock, #tray {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     margin-right: 10px;
@@ -91,6 +91,11 @@ widget > label {
 }
 #network.disconnected {
     color: #{{colors.red}};
+}
+
+/* Modules grouped in one pill */
+#temperature, #battery {
+    background-color: #{{colors.bg_light}};
 }
 
 /* Modules grouped in one pill */
